Review main.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107096 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ar/main.lang
+++ b/ar/main.lang
@@ -7,11 +7,11 @@
 
 
 ;About
-حول
+عن
 
 
 ;Store
-متجر
+المتجر
 
 
 ;Donate
@@ -19,11 +19,11 @@
 
 
 ;Support
-دعم
+الدعم
 
 
 ;Products
-منتجات
+المنتجات
 
 
 ;Add-ons
@@ -55,7 +55,7 @@
 
 
 ;About Mozilla
-حول موزيلا
+عن موزيلا
 
 
 ;Get Involved
@@ -63,11 +63,11 @@
 
 
 ;Licensing
-ترخيص
+الترخيص
 
 
 ;Careers
-مهن
+وظائف
 
 
 ;Press Center
@@ -111,7 +111,7 @@
 
 
 ;Download Firefox - Free
-نزّل فَيَرْفُكْس مجاناً
+نزّل فَيَرفُكس - مجانيّ
 
 
 ;Release Notes
@@ -127,7 +127,7 @@
 
 
 ;Free Download
-تنزيل مجاني
+تنزيل مجانيّ
 
 
 ;Help us make Firefox even better!
@@ -135,7 +135,7 @@
 
 
 ;Take a few moments to take a quick survey and share your thoughts with us.
-اغتنم لحظات من وقتك لتجيب على استفتاء سريع وتشاركنا أفكارك.
+اقتطع لحظات قليلة من وقتك لتجيب على استفتاء سريع وتشاركنا أفكارك.
 
 
 ;Close
@@ -147,7 +147,7 @@
 
 
 ;Download Now - Free
-حمّل الآن - مجانًا
+نزّل الآن - مجانيّ
 
 
 ;Return to top
@@ -159,7 +159,7 @@
 
 
 ;Firefox is up to date, but your current version of Flash Player can cause security and stability issues.  Please <a href="http://get.adobe.com/flashplayer/">install the free update</a> as soon as possible.
-فَيَرفُكس مُحدَّث، ولكن نسختك الحالية من مشغل الفلاش قد تسبب مشكلات في الأمن والثبات. نرجو منك <a href="http://get.adobe.com/flashplayer/">تثبيت التحديث المجاني</a> في أقرب فرصة.
+فَيَرفُكس مُحدَّث، ولكن نسختك الحالية من مشغل فلاش قد تسبب مشكلات في الأمن والثبات. نرجو منك <a href="http://get.adobe.com/flashplayer/">تثبيت التحديث المجاني</a> في أقرب فرصة.
 
 
 ;Features
@@ -175,7 +175,7 @@
 
 
 ;Develop for Mobile
-طوّر من أجل الجوّال
+طوِّر من أجل الجوّال
 
 
 ;Other Supported Platforms
@@ -187,15 +187,15 @@
 
 
 ;Choose your location
-اختر موقعك
+اختر مكانك
 
 
 ;Download Firefox directly from your phone
-نزّل فَيَرفُكس مباشرة من جوالك
+نزّل فَيَرفُكس مباشرة من جوّالك
 
 
 ;Download
-تنزيل
+نزّل
 
 
 ;Next
@@ -203,15 +203,15 @@
 
 
 ;MB
-ميغا بايت
+م.ب.
 
 
 ;MegaBytes
-ميغا بايت
+ميجا بايت
 
 
 ;FAQ
-الأسئلة الأكثر شيوعًا
+الأسئلة المتكررة
 
 
 ;Videos
@@ -219,7 +219,7 @@
 
 
 ;Except where otherwise <a href="%s">noted</a>, content on this site is licensed under the <br /><a href="%s">Creative Commons Attribution Share-Alike License v3.0</a> or any later version.
-كل المحتوى في هذا الموقع مرخص وفق رخصة <br /><a href="%2$s">Creative Commons Attribution Share-Alike License v3.0</a> أو الإصدارات الأحدث منها، إلا حيثما <a href="%1$s">يُشار</a> إلى غير ذلك.
+ما لم <a href="%s">يُشَر</a> إلى غير ذلك،كل المحتوى في هذا الموقع مرخص وفق رخصة <br /><a href="%s">المشاع الإبداعي المشاركة بالمثل 3.0</a> أو الإصدارات الأحدث منها.
 
 
 ;Report Trademark Abuse
@@ -263,7 +263,7 @@
 
 
 ;Whoops! Be sure to enter a valid email address.
-أوبس! تأكد من إدخالك لعنوان بريد إلكتروني صالح.
+أخ! تأكد من إدخالك لعنوان بريد إلكتروني صالح.
 
 
 ;Please read the Mozilla Privacy Policy and agree by checking the box.
@@ -271,7 +271,7 @@
 
 
 ;Please enter your email address and review the Mozilla Privacy Policy.
-رجاءً أدخِل بريدك الإلكتروني وراجع سياسة خصوصية موزيلا.
+أدخِل رجاءً بريدك الإلكتروني وراجع سياسة خصوصية موزيلا.
 
 
 ;Mobile
@@ -283,7 +283,7 @@
 
 
 ;Take a Look at Tomorrow's Web
-ألقِ نظرة على الوب المستقبلي
+ألقِ نظرة على وِب الغد
 
 
 ;Journey to the Future with Firefox
@@ -311,11 +311,11 @@
 
 
 ;Experience tomorrow's Web today.
-جرّب وب الغد الآن.
+جرّب وب الغد اليوم.
 
 
 ;Check out the new look and feel of Firefox.
-تحقق من مظهر فَيَرفُكس الجديد.
+ألق نظرة على مظهر فَيَرفُكس الجديد.
 
 
 ;Browse the future of the Web.
@@ -339,7 +339,7 @@
 
 
 ;Get Firefox for Android
-احصل على فَيَرفُكس في أندرويد
+احصل على فَيَرفُكس لأندرويد
 
 
 ;Download for <span>Android</span>
@@ -347,11 +347,11 @@
 
 
 ;Free from the Android Market
-مجانصا من سوق أندرويد
+مجانًا من سوق أندرويد
 
 
 ;Desktop
-إصدارة الحاسوب
+سطح المكتب
 
 
 ;Firefox Beta for mobile
@@ -367,7 +367,7 @@
 
 
 ;Mozilla Firefox. Bringing the modern Web to XP.
-موزيلا فَيَرفُكس. جلبنا الوب الحديث إلى وندوز إكس بي.
+موزيلا فَيَرفُكس. يجلب الوب الحديثة إلى وندوز إكس بي.
 
 
 ;Super speed
@@ -383,18 +383,18 @@
 
 
 ;You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
-أنت تستخدم إصدارة قديمة من فَيَرفُكس. احصل على التحديث كي تبقى آمنًا! <br/> <a href="%s">نزّل التحديث المجاني</a> في أقل من دقيقة لتحصل على آخر المزايا وسرعة أكبر وإصلاحات أمنية.
+تستخدم إصدارة قديمة من فَيَرفُكس. احصل على التحديث كي تبقى آمنًا! <br/> <a href="%s">نزّل التحديث المجاني</a> في أقل من دقيقة لتحصل على آخر المزايا وسرعة أكبر وإصلاحات أمنية.
 
 ;You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
 يحتاج متصفحك للتحديث! زِد أمان متصفحك في أقل من دقيقة. <br/> ابدأ باستخدام فَيَرفُكس الجديد لتتصفح الوب وتخصصه بشكل أفضل. <br/> التحديث سريع ومجاني!
 
 
 ;You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
-أنت تستخدم إصدارة أقدم من فَيَرفُكس. احصل على <a href="%s">التحديث</a> لتبقى آمنًا! <br/> استكشف آخر المزايا والتحديثات الأمنية وأسرع فَيَرفُكس حتى الآن. قُم بالترقية المجانية في أقل من دقيقة.
+تستخدم إصدارة أقدم من فَيَرفُكس. احصل على <a href="%s">التحديث</a> لتبقى آمنًا! <br/> استكشف آخر المزايا والتحديثات الأمنية وأسرع فَيَرفُكس حتى الآن. قُم بالترقية المجانية في أقل من دقيقة.
 
 
 ;Upgrade now
-قُم بالترقية الآن
+رقِّ الآن
 
 
 ;Update now
