--- a/ar/snippets.lang
+++ b/ar/snippets.lang
@@ -2,7 +2,7 @@
 
 
 ;Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>.
-اصحب فَيَرفُكس معك أينما ذهبت! فَيَرفُكس على أندرويد جاهز ليسعدك ويمتعك. <a href="%s">احصل عليه الآن</a>.
+اصطحب فَيَرفُكس معك أينما ذهبت. فَيَرفُكس على أندرويد جاهز لتستمتع به. <a href="%s">احصل عليه الآن</a>.
 
 
 ;Now that you've got the latest version, <a href="%s">learn about all the cool things</a> you can do with your Firefox.
@@ -10,11 +10,11 @@
 
 
 ;You're not on the latest version of Firefox. <a href="%s">Upgrade today</a> to get the best of the Web!
-نسختك ليست أحدث نسخة من فَيَرفُكس. <a href="%s">قُم بالترقية الآن</a> لتحصل على أفضل ما في الوب!
+نسختك ليست أحدث نسخة من فَيَرفُكس. <a href="%s">رقِّ الآن</a> لتحصل على أفضل ما في الوب!
 
 
 ;Get the latest Firefox features first in <a href="%s">Aurora</a>.
-احصل على أحدث المزايا في فَيَرفُكس أولًا بأول في <a href="%s">أورورا</a>.
+احصل على أحدث مزايا فَيَرفُكس أولًا بأول في <a href="%s">أورورا</a>.
 
 
 ;Get a sneak preview of the future of Firefox. <a href="%s">Download Firefox Aurora</a> and test the latest features.
@@ -30,15 +30,15 @@
 
 
 ;Firefox is proudly non-profit and free to innovate on your behalf without compromise. <a href="%s">Learn more</a> about our mission.
-فَيَرفُكس يفتخر بأنه متصفح مجاني غير ربحي يبتكر من أجل منفعتك وبلا قيود أو ضغوط. <a href="%s">اعرف المزيد</a> عن مهمتنا.
+فَيَرفُكس يفتخر بأنه غير ربحي وحرّ ليبتكر من أجلك بلا قيود أو ضغوط. <a href="%s">اعرف المزيد</a> عن مهمتنا.
 
 
 ;Fast, flexible and secure, Firefox is the only browser that puts you first. <a href="%s">Learn more</a> about what makes us different by design.
-فَيَرفُكس سريع ومرن وآمن، وهو المتصفح الوحيد الذي يضعك في قمة أولوياته <a href="%s">اعرف المزيد</a> عما يجعل فَيَرفُكس مختلفًا في تركيبته.
+فَيَرفُكس سريع ومرن وآمن، وهو المتصفح الوحيد الذي يضعك في قمة أولوياته <a href="%s">اعرف المزيد</a> عما يجعل فَيَرفُكس مختلفًا من الأساس.
 
 
 ;<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
-<a href="%s">نزّل فَيَرفُكس على جهاز أندرويد اللوحي</a> واحصل على قوة الوب في يديك الآن.
+<a href="%s">نزّل فَيَرفُكس على جهاز أندرويد اللوحي</a> واحصل على قوة الوب بين يديك الآن. احصل عليه الآن
 
 
 ;Keep your plugins up to date and stay safe online with <a href="%s">Plugin Check</a>.
@@ -54,7 +54,7 @@
 
 
 ;No two Firefox users are alike. <a href="%s">Add any button to your browser</a> or remove the ones you don't use. Right-click on home and select Customize.
-ليس هناك مستخدمان متشابهان لفيرفكس. <a href="%s">أضِف أي زر لمتصفحك</a> أو أزل الأزرار التي لا تستخدمها. انقر بالزر الأيمن على زر البداية واختر ’خصص’.
+كل مستخدم لفَيَرفُكس مختلف عن الآخر. <a href="%s">أضِف أي زر لمتصفحك</a> أو أزل الأزرار التي لا تستخدمها. انقر بالزر الأيمن على زر البداية واختر ”خصص“.
 
 
 ;Dress up your Firefox with Personas. Roll over to try, click to apply. Or visit the <a href="%s">gallery</a> for thousands more!
@@ -70,78 +70,78 @@
 
 
 ;Get in early and help shape the future of Firefox. <a href="%s">Download Firefox Aurora.</a>
-كُن ممن يصنع الحدث وشارك في تشكيل مستقبل فيرفكس.. <a href="%s">نزّل فيرفكس أورورا.</a>
+كُن ممن يصنع الحدث وشارك في تشكيل مستقبل فَيَرفُكس. <a href="%s">نزّل فَيَرفُكس أورورا.</a>
 
 
 ;Firefox for Android is now optimized for the way you browse on tablets. <a href="%s">Get the power of the Web at your fingertips</a>.
-حسّنا فيرفكس على أندرويد ليعمل بشكل أفضل مع الأجهزة اللوحية. <a href="%s">احصل على قوة الوب تحت ملمس أصابعك</a>.
+حسّنّا فَيَرفُكس على أندرويد ليعمل بشكل أفضل مع الأجهزة اللوحية. <a href="%s">احصل على قوة الوب عند أطراف أصابعك</a>.
 
 
 ;Download Firefox on your Android tablet and put the power of the Web right in your hands. <a href="%s">Get it now</a>.
-نزّل فيرفكس على جهاز أندرويد اللوحي واحصل على قوة الوب في يديك. <a href="%s">نزّله الآن</a>.
+نزّل فَيَرفُكس على جهاز أندرويد اللوحي واحصل على قوة الوب بين يديك. <a href="%s">احصل عليه الآن</a>.
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
+<a href="%">نزّل فَيَرفُكس بيتا</a>، وأطلعنا بانطباعاتك وساعد في جعل الإصدارة التالية من فَيَرفُكس أكثر روعة لإسعاد 450 مليون مستخدم.
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
+اختبر الخصائص وساعد على تحسينهم وتهذيبهم لجعل إصدارتنا التالية أفضل من أي وقت مضى. <a href="%">نزّل فَيَرفُكس بيتا الآن!</a>
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
+أتحب فَيَرفُكس؟ <a href="%">نزّل فَيَرفُكس بيتا</a> وأخبرنا بانطباعاتك اليوم.
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
+هل تستخدم أحدث فَيَرفُكس بيتا؟ <a href="%">احصل عليه الآن</a> وساعدنا في اختبار أحدث الخصائص.
 
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
+لا تستخدم آخر فَيَرفُكس بيتا؟ <a href="%">احصل عليه الآن</a> واطلع على ما نطوّره لإصدارتنا التالية.
 
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
+أتريد أن تشاركنا انطباعاتك؟ <a href="%">اعرف كيف</a> وساعدنا على جعل إصدارتنا التالية أفضل من أي وقت مضى.
 
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
+لمستخدمي فَيَرفُكس بيتا: لا تنسَ <a href="%">إطلاعنا على انطباعاتك</a> لمساعدتنا على وضع اللمسات الأخيرة على إصدارتنا التالية.
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
+ساعد على جعل إصدارتنا التالية أكثر روعة. <a href="%">أصبح حليفا لنا</a> وشارك فَيَرفُكس مع أصدقائك.
 
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
+ادعُ أصدقائك للاطلاع على خصائص فَيَرفُكس التالية. <a href="%">أصبح حليفا لنا</a> وشارك فَيَرفُكس أرورا اليوم.
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+هل تستخدم فَيَرفُكس على أكثر من حاسوب؟ يمكنك مزامنة إضافاتك بينهم الآن. <a href="%">اعرف كيف تُفعّل المزامنة.</a>
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+سريع، سريع، سريع. <a %s>حصل فَيَرفُكس لأندرويد على تحديث كبير </a>. ساعدنا على نشر الأخبار.
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+لفَيَرفُكس خصائص جيدة تساعدك على أداء مهامك أسرع. <a href="%">اطّلع على هذا الفديو لتعرف المزيد.</a>
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+أتحب فَيَرفُكس بيتا؟ <a href="%s">ادعُ أصدقائك</a> للاطلاع على ما سيأتي قريبا في فَيَرفُكس.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+أستخدم فَيَرفُكس بيتا لأطّلع على أحدث الخصائص والإبداعات القادمة قريبا في فَيَرفُكس. <a href="%s">اطلع عليه</a>.
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+شكرا على استخدام فَيَرفُكس بيتا للمساعدة في جعل فَيَرفُكس أروع. والآن، <a href="%s">ادعُ أصدقائك</a> لتجربته.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+أستخدم فَيَرفُكس بيتا لأختبر أحدث الخصائص لجعل فَيَرفُكس أروه. <a href="%s">جربّه</a>.
 
 
