--- a/ms/mobile.lang
+++ b/ms/mobile.lang
@@ -1,7 +1,7 @@
 # The strings below are specific to the Mobile page located at http://www.mozilla.org/mobile/
 
 ;Get Firefox for Android
-Get Firefox for Android
+Dapatkan Firefox untuk Android
 
 ;Download for <span>Android</span>
 Download for <span>Android</span>
