--- a/et/snippets.lang
+++ b/et/snippets.lang
@@ -130,18 +130,18 @@ Firefoxi uued võimalused võimaldavad sul järgmise ülesande kallale veelgi ki
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Armastad Firefoxi beetat? <a href="%s">Kutsu sõbrad</a> vaatama, mis Firefoxi varsti tulemas on.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+Kasutan Firefoxi beetat uusimate võimaluste ning innovaatiliste lahenduste proovimiseks, mis peagi Firefoxi jõuavad. <a href="%s">Proovi järgi</a>.
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Täname Firefoxi beeta kasutamise eest. Aitad meil nii Firefoxi veelgi paremaks muuta. <a href="%s">Kutsu ka sõbrad</a> seda proovima.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+Kasutan Firefoxi beetat ning aitan uusimaid lahendusi testides seda veelgi paremaks muuta. <a href="%s">Proovi ka</a>.
 
 
