fix for file newsletter dot lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107143 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ms/newsletter.lang
+++ b/ms/newsletter.lang
@@ -1,7 +1,7 @@
 # These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
 
 ;Get Monthly News
-Get Monthly News
+Dapatkan Berita Bulanan
 
 
 ;Your Email Address
