--- a/es-ES/videos/video_box.lang
+++ b/es-ES/videos/video_box.lang
@@ -1,103 +1,103 @@
 
 ;Your apps on all your devices
-Your apps on all your devices
+Tus aplicaciones en todos tus dispositivos
 
 
 ;box is an enterprise content management solution.
-Box is an enterprise content management solution.
+Box es una solución de gestión de contenidos para empresas.
 
 
 ;Basically the simplest way for business users
-Basically the simplest way for business users
+Básicamente, es la forma más fácil para los usuarios empresariales
 
 
 ;to manage, share and access content that they care about
-to manage, share and access content that they care about
+de gestionar, compartir y acceder a los contenidos que les interesan
 
 
 ;on any device be it a mobile device, a tablet or their desktop.
-on any device be it a mobile device, a tablet or their desktop.
+desde cualquier dispositivo, ya sea móvil, tableta o escritorio.
 
 
 ;When you think about features that enterprises need
-When you think about features that enterprises need
+Cuando se piensa en qué funcionalidades necesitan las empresas,
 
 
 ;such as security, sharing, permissions, administration
-such as security, sharing, permissions, administration
+seguridad, intercambio, permisos, administración
 
 
 ;and overall admin management over what content is being shared by whom and where.
-and overall admin management over what content is being shared by whom and where.
+y gestión general sobre quién comparte los contenidos y dónde,
 
 
 ;These are things that we have, by design, baked into our product
-These are things that we have, by design, baked into our product
+nosotros las tenemos integradas en nuestro productos desde su diseño,
 
 
 ;and that is really something that sets us apart in the marketplace.
-and that is really something that sets us apart in the marketplace.
+lo que nos hace destacar en el mercado de aplicaciones,
 
 
 ;While still providing the simplicity and ease of use
-While still providing the simplicity and ease of use
+al mismo tiempo que ofrecemos la simplicidad y facilidad de uso
 
 
 ;that you would expect out of a consumer solution.
-that you would expect out of a consumer solution.
+que se espera de una solución diseñada para los consumidores.
 
 
 ;At its very core, our product is a web product, so porting it into HTML5
-At its very core, our product is a web product, so porting it into HTML5
+Esencialmente, el nuestro es un producto web, así que al portarlo a HTML5
 
 
 ;was just adding on a couple of extra things to it.
-was just adding on a couple of extra things to it.
+se agregaron un par de características extra.
 
 
 ;Since we have adopted HTML5 technology both for our web product and for our default mobile page,
-Since we have adopted HTML5 technology both for our web product and for our default mobile page,
+Hemos adoptado la tecnología HTML5 para nuestro producto web y nuestra página predeterminada para dispositivos móviles
 
 
 ;so that our web page can work by default on any device,
-so that our web page can work by default on any device,
+por lo que nuestra página pueda funcionar en cualquier dispositivo.
 
 
 ;we have invested in a unique Android application and a unique iPhone application
-we have invested in a unique Android application and a unique iPhone application
+Hemos invertido en una aplicación Android y en una aplicación iPhone únicas
 
 
 ;but we still have a one-size-fits-all web page for all mobile devices in general.
-but we still have a one-size-fits-all web page for all mobile devices in general.
+y aun así tenemos una página web accesible en general desde todos los dispositivos móviles.
 
 
 ;What was really interesting for us with working with Mozilla and the Marketplace
-What was really interesting for us with working with Mozilla and the Marketplace
+Una de las cosas que más nos interesó trabajar con Mozilla en el Marketplace
 
 
 ;is offering our service to the people who need it in the form that they need it.
-is offering our service to the people who need it in the form that they need it.
+fue poder ofrecer nuestro servicio a los usuarios que lo necesitan y de la forma en que lo necesitan.
 
 
 ;We are aware that Mozilla does also have quite a few users and its always been official
-We are aware that Mozilla does also have quite a few users and its always been official
+Somos conscientes de que Mozilla tiene también bastantes usuarios y siempre ha sido parte de su política
 
 
 ;to get your brand and get your name out there in a marketplace with hundreds of millions of perspectives.
-to get your brand and get your name out there in a marketplace with hundreds of millions of perspectives.
+lograr posicionar la marca y el nombre en un mercado de aplicaciones con cientos de millones de perspectivas.
 
 
 ;Once we read through the documentation it really was just a matter of minutes before we were able to take
-Once we read through the documentation it really was just a matter of minutes before we were able to take
+Una vez que leímos la documentación, en cuestión de minutos comenzamos a diseñar
 
 
 ;our web page and our mobile page, both of which had already included HTML5 technology,
-our web page and our mobile page, both of which had already included HTML5 technology,
+la página web y la página para dispositivos móviles, que ya tenía incluida la tecnología HTML5,
 
 
 ;and create an installer for the Mozilla App Store.
-and create an installer for the Mozilla App Store.
+y a crear un instalador para que la tienda de aplicaciones de Mozilla.
 
 
 ;distribute your apps
-distribute your apps
+distribuye tus aplicaciones.
