[es] video_evernote.lang l10n updated.
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107148 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-ES/videos/video_evernote.lang
+++ b/es-ES/videos/video_evernote.lang
@@ -1,108 +1,108 @@
 ;Evernote is a service that helps you remember everything.
-Evernote is a service that helps you remember everything.
+Evernote es un servicio que te ayuda a recordarlo todo.
 
 
 ;We have clients on every platform: mobile, desktop, web
-We have clients on every platform: mobile, desktop, web
+Tenemos clientes en todas las plataformas: móviles, escritorio, web.
 
 
 ;and basically it helps you capture your memories
-and basically it helps you capture your memories
+Básicamente lo que hace es ayudarte a capturar tus recuerdos
 
 
 ;and then find them whenever you need them.
-and then find them whenever you need them.
+y a encontrarlos siempre que los necesites,
 
 
 ;whether they are web pages or notes or things you need to do.
-whether they are web pages or notes or things you need to do.
+ya sean páginas web, notas o cosas que tienes que hacer.
 
 
 ;Pictures, audio clips; anything you want
-Pictures, audio clips; anything you want
+Imágenes, clips de audio... cualquier cosa que quieras.
 
 
 ;Evernote is basically everywhere that you need it to be.
-Evernote is basically everywhere that you need it to be.
+Evernote está siempre donde necesites que esté.
 
 
 ;We’re on mobile, we’re on desktop, we’re on web
-We’re on mobile, we’re on desktop, we’re on web
+Estamos en dispositivos móviles, en escritorio, en la web,
 
 
 ;and all of these apps synch together.
-and all of these apps synch together.
+sincronizando entre sí todas esas aplicaciones.
 
 
 ;The web is a big part of our offering.
-The web is a big part of our offering.
+La web constituye una gran parte de nuestra oferta.
 
 
 ;Many, many users use our web clipper as a way
-Many, many users use our web clipper as a way
+Muchísimos usuarios utilizan el capturador web
 
 
 ;to capture pages that they see and then recall them later,
-to capture pages that they see and then recall them later,
+para captar páginas que ven y poder recuperarlas más tarde,
 
 
 ;even when they are offline and they don’t have access to the Internet.
-even when they are offline and they don’t have access to the Internet.
+incluso cuando no están conectados o no tienen acceso a Internet.
 
 
 ;Using modern web technologies lets us give the best and richest experience we can for our users.
-Using modern web technologies lets us give the best and richest experience we can for our users.
+Las tecnologías web más avanzadas nos permiten ofrecer una experiencia óptima y enriquecida a nuestros usuarios.
 
 
 ;So HTML5 gave a fast user experience.
-So HTML5 gave a fast user experience.
+HTML5 nos permitió acelerar la experiencia de nuestros usuarios.
 
 
 ;It has all the things you expect from a desktop application
-It has all the things you expect from a desktop application
+Tiene todo lo que se espera en una aplicación de escritorio,
 
 
 ;whether its drag and drop, file manipulation, rich text editing,
-whether its drag and drop, file manipulation, rich text editing,
+como arrastrar y soltar, manipular archivos, editar textos enriquecidos...
 
 
 ;all of that just inside of the browser without a heavyweight application installation.
-all of that just inside of the browser without a heavyweight application installation.
+todo ello dentro del navegador y sin tener que instalar una aplicación pesada.
 
 
 ;So Evernote’s goal is to help you remember everything
-So Evernote’s goal is to help you remember everything
+El objetivo de Evernote es ayudarte a recordar todo
 
 
 ;and a big part of that is to help you remember things when you’re browsing around the web.
-and a big part of that is to help you remember things when you’re browsing around the web.
+y gran parte de ese todo es ayudarte a recordar cosas cuando estás navegando en la Web.
 
 
 ;You’re trying to find some information.
-You’re trying to find some information.
+Estás intentando encontrar información.
 
 
 ;Working with the Mozilla Marketplace was really easy.
-Working with the Mozilla Marketplace was really easy.
+La verdad es que trabajar con el Marketplace de Mozilla fue muy fácil.
 
 
 ;Making the manifest file was a simple JSON file and then interacting with the website
-Making the manifest file was a simple JSON file and then interacting with the website
+Crear el archivo del manifiesto consistió en desarrollar un archivo JSON e interactuar con el sitio
 
 
 ;to actually get our application into the marketplace
-to actually get our application into the marketplace
+para situar nuestra aplicación en el mercado de aplicaciones
 
 
 ;was straightforward and very self-explanatory.
-was straightforward and very self-explanatory.
+fue sencillo y conciso.
 
 
 ;The advertising and access to new users from the web is great through the Mozilla Marketplace.
-The advertising and access to new users from the web is great through the Mozilla Marketplace.
+La publicidad y el acceso a nuevos usuarios desde la web a través del Marketplace de Mozilla es genial.
 
 
 ;distribute your apps
-distribute your apps
+distribuye tus aplicaciones
 
 
