[es] video_kicksend.lang l10n updated.
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107149 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-ES/videos/video_kicksend.lang
+++ b/es-ES/videos/video_kicksend.lang
@@ -1,118 +1,118 @@
 ;The problem with file sharing right now is that not one solution
-The problem with file sharing right now is that not one solution
+Ahora mismo el problema con el intercambio de archivos es que ninguna solución
 
 
 ;provides a really, really good experience for non technical users.
-provides a really, really good experience for non technical users.
+ofrece a los usuarios no técnicos una experiencia buena del todo.
 
 
 ;With Kicksend you can send files to any of your friends,
-With Kicksend you can send files to any of your friends,
+Con Kicksend puedes enviar archivos de cualquier tamaño
 
 
 ;of any size, just by dragging and dropping onto the web
-of any size, just by dragging and dropping onto the web
+a cualquiera de tus amigos simplemente arrastrando y soltando en la web.
 
 
 ;and you can put in an email address
-and you can put in an email address
+Y puedes incluir una dirección de correo
 
 
 ;and that file gets delivered directly to your friends.
-and that file gets delivered directly to your friends.
+y el archivo se enviará directamente a tus amigos.
 
 
 ;We decided to go the native route because we want to provide
-We decided to go the native route because we want to provide
+Decidimos elegir la opción nativa porque queremos ofrecer
 
 
 ;a really good experience that people are used to on iPhone and Android
-a really good experience that people are used to on iPhone and Android
+la experiencia óptima a la que los usuarios de iPhone y Android están acostumbrados,
 
 
 ;but at the same time, we still want to provide
-but at the same time, we still want to provide
+pero al mismo tiempo, queremos seguir ofreciendo
 
 
 ;the same great experience on the mobile web.
-the same great experience on the mobile web.
+la misma gran experiencia en la web móvil.
 
 
 ;HTML5 allows us to be on multiple platforms
-HTML5 allows us to be on multiple platforms
+HTML5 nos permite estar en múltiples plataformas
 
 
 ;without having to worry about dependencies on each of these platforms.
-without having to worry about dependencies on each of these platforms.
+sin tener que preocuparnos de las dependencias de cada una de ellas.
 
 
 ;Developing in HTML5 really helps us provide the features that
-Developing in HTML5 really helps us provide the features that
+El desarrollo en HTML5 nos ayuda a ofrecer las características que
 
 
 ;our users need to be able to send files really easily through the web.
-our users need to be able to send files really easily through the web.
+nuestros usuarios necesitan para poder enviar fácilmente archivos a través de la web.
 
 
 ;We try to be on every single mobile platform
-We try to be on every single mobile platform
+Intentamos estar en cada una de las plataformas móviles.
 
 
 ;We do have native applications on iPhone and Android
-We do have native applications on iPhone and Android
+Disponemos de aplicaciones nativas en iPhone y Android,
 
 
 ;but we do realize that the rest of the world
-but we do realize that the rest of the world
+pero nos damos cuenta de que el resto del mundo
 
 
 ;can use HTML5 to access Kicksend wherever they are.
-can use HTML5 to access Kicksend wherever they are.
+puede usar HTML5 para acceder a Kicksend estén donde estén.
 
 
 ;The Mozilla Marketplace, I mean, first off it gives you massive distribution
-The Mozilla Marketplace, I mean, first off it gives you massive distribution
+El Marketplace de Mozilla, es decir, lo primero es que te ofrece distribución masiva
 
 
 ;because everybody who is using Firefox will essentially be using it.
-because everybody who is using Firefox will essentially be using it.
+porque todo el mundo que esté usando Firefox podrá utilizarlo también.
 
 
 ;And there is also a mobile aspect to it that
-And there is also a mobile aspect to it that
+Y también existe un aspecto relacionado con la movilidad
 
 
 ;is going to push our mobile HTML5 app to many, many millions of users
-is going to push our mobile HTML5 app to many, many millions of users
+que va a hacer nuestra aplicación HTML5 más visible a muchos millones de usuarios,
 
 
 ;and that’s a no-brainer at that point.
-and that’s a no-brainer at that point.
+eso no es ningún misterio.
 
 
 ;The fact that we can update very easily
-The fact that we can update very easily
+El hecho de que podamos actualizar fácilmente
 
 
 ;and actually provide services through the browser
-and actually provide services through the browser
+y ofrecer servicios a través del navegador
 
 
 ;that gives our app special permissions is something that is also a no-brainer
-that gives our app special permissions is something that is also a no-brainer
+que da permisos especiales a nuestra aplicación tampoco es ningún misterio.
 
 
 ;It took us may 15 minutes to bundle our app up and publish it
-It took us may 15 minutes to bundle our app up and publish it
+Tardamos 15 minutos en empaquetar nuestra aplicación y publicarla
 
 
 ;to the Marketplace and ever since then we pushed out
-to the Marketplace and ever since then we pushed out
+en el Marketplace y desde entonces hemos realizado
 
 
 ;a few releases already and it was a very smooth smooth experience.
-a few releases already and it was a very smooth smooth experience.
+un par de actualizaciones y ha sido una experiencia sin complicaciones.
 
 
 ;distribute your apps
-distribute your apps
+distribuye tus aplicaciones
