[es] video_mobbase.lang 10n updated.
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107150 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-ES/videos/video_mobbase.lang
+++ b/es-ES/videos/video_mobbase.lang
@@ -1,91 +1,91 @@
 ;Your apps on all your devices
-Your apps on all your devices
+Tus aplicaciones en todos tus dispositivos
 
 
 ;MobBase builds apps for bands and labels.
-MobBase builds apps for bands and labels.
+MobBase diseña aplicaciones para grupos y sellos discográficos.
 
 
 ;We make it very easy for bands to connect with their fans all across mobile devices.
-We make it very easy for bands to connect with their fans all across mobile devices.
+Hacemos que sea fácil para los grupos conectar con sus fans en todos los dispositivos móviles.
 
 
 ;We recognize that there is a big problem that artists had.
-We recognize that there is a big problem that artists had.
+Detectamos que los artistas tenían un gran problema.
 
 
 ;They have all these fans who are using all sorts of devices
-They have all these fans who are using all sorts of devices
+Tienen a todos sus fans que usan todo tipo de dispositivos,
 
 
 ;and their websites are not going to work well on various devices.
-and their websites are not going to work well on various devices.
+pero sus sitios web no funcionan bien en todos ellos.
 
 
 
 ;So we started off working in native environments, iPhone first, then Android,
-So we started off working in native environments, iPhone first, then Android,
+Así que comenzamos a trabajar en entornos nativos, primero iPhone, después Adroid.
 
 
 ;and each has its own complexities and subtleties that make it difficult to maintain and iterate on both.
-and each has its own complexities and subtleties that make it difficult to maintain and iterate on both.
+Cada uno posee sus propias complijidades y particularidades, lo que dificulta el mantenimiento y la iteración en ambos.
 
 
 ;We quickly realized that the key to getting a cross-platform solution for most artists was HTML5
-We quickly realized that the key to getting a cross-platform solution for most artists was HTML5
+Rápidamente nos dimos cuenta de que la clave para que lograran una solución para múltiples plataformas era HTML5
 
 
 ;and the reason is this:
-and the reason is this:
+y ésta es la razón:
 
 
 ;To build a native iPhone App, a native Android App and a native whatever App, is time consuming
-To build a native iPhone App, a native Android App and a native whatever App, is time consuming
+Para desarrollar una aplicación iPhone nativa, una aplicación Android nativa y una aplicación lo que sea nativa
 
 
 ;and each app is a different project and each app requires different assets
-and each app is a different project and each app requires different assets
+se necesita tiempo porque cada una es un proyecto diferente y requiere recursos diferentes,
 
 
 ;and it becomes a real headache in terms of time and also money.
-and it becomes a real headache in terms of time and also money.
+y eso supone un verdadero dolor de cabeza en términos de tiempo y dinero.
 
 
 ;What HTML5 allows our clients to do is to build the app once and distribute it everywhere.
-What HTML5 allows our clients to do is to build the app once and distribute it everywhere.
+HTML5 permite a nuestros clientes desarrollar una aplicación de una sola vez y distribuirla por todos sitios.
 
 
 ;With the  Mozilla Marketplace we have a unique opportunity to distribute web applications.
-With the  Mozilla Marketplace we have a unique opportunity to distribute web applications.
+Gracias al Marketplace de Mozilla tenemos una oportunidad única para distribuir las aplicaciones web.
 
 
 ;This is something that was king of a conundrum for us, you know
-This is something that was king of a conundrum for us, you know
+Hay algo que suponía una especie de reto para nosotros:
 
 
 ;we want to be able to distribute these and not just provide links.
-we want to be able to distribute these and not just provide links.
+queremos poder distribuirlas, no solo ofrecer enlaces.
 
 
 ;When Mozilla reached out to us and we entered a partnership with them
-When Mozilla reached out to us and we entered a partnership with them
+Cuando Mozilla se puso en contacto y nos hicimos socios
 
 
 ;it was great because it was an App store.
-it was great because it was an App store.
+fue genial, porque era una tienda de aplicaciones.
 
 
 ;Fans can go to it, they can see the assets, they can see the description
-Fans can go to it, they can see the assets, they can see the description
+Los fans pueden visitarla, ver los recursos y las descripciones,
 
 
 ;they can download it just like they’re used to downloading an Android or iPhone app.
-they can download it just like they’re used to downloading an Android or iPhone app.
+pueden descargar una aplicación igual que hacen con Android o iPhone.
 
 
 ;So, Mozilla provides a great, great market and a great distribution channels for our HTML5 Apps.
-So, Mozilla provides a great, great market and a great distribution channels for our HTML5 Apps.
+Mozilla ofrece un gran mercado y un gran canal de distribución para tus aplicaciones HTML5.
 
 
 ;distribute your apps
-distribute your apps
+distribuye tus aplicaciones
