Songhay: high priority .lang files at 100%
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107188 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/son/firefoxtesting.lang
+++ b/son/firefoxtesting.lang
@@ -23,32 +23,32 @@ Firefox Beta kanbe jinay še
 
 
 ;Download Beta and be part of the next version of Firefox.
-Download Beta and be part of the next version of Firefox.
+Beta zumandi ka hanga Firefox hiino woo dumoo bande.
 
 
 ;1. Test Features
-1. Test Features
+1. Šiiyan alhaaley
 
 
 ;Try out the latest performance, customization and security enhancements almost ready for prime time.
-Try out the latest performance, customization and security enhancements almost ready for prime time.
+Teeyan, boŋše-hanseyan nda saajaw sahãndiyan kokorantey šii kaŋ hima soolante waati-fellante še.
 
 
 ;2. Refine &amp; Polish
-2. Refine &amp; Polish
+2. Boryandi &amp; hanse
 
 
 ;File bugs to help us put the final tweaks on performance and functionality in a stable environment.
-File bugs to help us put the final tweaks on performance and functionality in a stable environment.
+Goy laybu tuku k'ir gaa ka ɲamti korawey dam teeyan nda goy sahã fondo ra windila tabatante ra.
 
 
 ;3. Do Your Part
-3. Do Your Part
+3. War bagaa tee
 
 
 ;Have an impact on the next version of Firefox and the 450 million people who use it every day.
-Have an impact on the next version of Firefox and the 450 million people who use it every day.
+War anniyaa bayrandi Firefox hiino dumoo ga nda boro miliyoŋ 450 kaŋ g'a ka goy zaari kul še.
 
 
 ;Supported devices
-Supported devices
+Jinay gaakašinantey
