--- a/son/mobile.lang
+++ b/son/mobile.lang
@@ -59,68 +59,68 @@ Forba iTunes ra
 
 
 ;You’ll get to experience cutting-edge features and provide feedback to help refine and polish what will be in the final release.
-You’ll get to experience cutting-edge features and provide feedback to help refine and polish what will be in the final release.
+War ga hin ka duu alhaali kul-šifanteyaŋ nda laasaabu willandi ka gaa ka haya kaŋ ga kokor ka fatta hennandi nd'i yuttandi.
 
 
 ;Developer Tools
-Developer Tools
+Cinakey goyjinawey
 
 
 ;You can install the mobile version of Firefox to our desktop computer in order to test, provide feedback, and build add-ons.
-You can install the mobile version of Firefox to our desktop computer in order to test, provide feedback, and build add-ons.
+War ga hin ka Firefox kanbe-jinay dumoo sinji ir ordinateroo g'a ka šii, laasaabu nda tontoniyaŋ cin da.
 
 
 ;Connect With Firefox for Mobile:
-Connect With Firefox for Mobile:
+Firefox kange-jinay-še cee:
 
 
 ;Monthly newsletter
-Monthly newsletter
+Handu alhabar bataga
 
 
 ;Follow us
-Follow us
+Ir gana
 
 
 ;Become a fan
-Become a fan
+Tee hangakaw
 
 
 ;Firefox is full of innovations that let you type less, browse more and get to the Web quickly and easily.
-Firefox is full of innovations that let you type less, browse more and get to the Web quickly and easily.
+Firefox ga too nda taagandir ka žabu hantumyan ra, ka Interneti naarumi tonton nda cahãri nda faala.
 
 
 ;Freedom from typing
-Freedom from typing
+Goy bila nda hantumyan
 
 
 ;The Awesome Screen learns your favorite sites so you can browse with little or no typing.
-The Awesome Screen learns your favorite sites so you can browse with little or no typing.
+Diji kayfantaa kaŋ ga war nungey bay nga boŋ še hala war ma hin ka naaru nda hantum kayna wala bila nd'a. 
 
 
 ;Best of both worlds
-Best of both worlds
+Koy hinka kaanoo
 
 
 ;Firefox for Android is now redesigned and optimized for the way you browse on phones and tablets.
-Firefox for Android is now redesigned and optimized for the way you browse on phones and tablets.
+Firefoy Android še hanse n' ka fasal taaga sohõ nd'a sahãndi takaa kaŋ nda war ga dii Internet talfon nda walhayze ga še. 
 
 
 ;Browse quick and easy
-Browse quick and easy
+Naaru cahã nda faala
 
 
 ;Features like Sync, tabbed browsing and one-touch bookmarking mean everything you want is close at hand.
-Features like Sync, tabbed browsing and one-touch bookmarking mean everything you want is close at hand.
+Alhaaliyaŋ sanda Sync, nor loku naarumi nda mooru-foo doo-šilbayyan maanaa ti haya kaŋ war ga baa kul man kanbe.
 
 
 ;<a %s>Need help?</a> Visit our Firefox for Android Support site.
-<a %s>Need help?</a> Visit our Firefox for Android Support site.
+<a %s>Ga baa faaba?</a> Koy ir Firefox Android še gaakašinay nungoo do.
 
 
 ;Download and test the build that’s right for you.
-Download and test the build that’s right for you.
+Cinaroo kaŋ ga tee war še zumandi k'a šii.
 
 
 ;See all our channels for mobile »
-See all our channels for mobile »
+Dii kaanawey kul kaŋ goo kanbehaya še »
