whatsnew lang file for Catalan (ca)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107197 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ca/whatsnew.lang
+++ b/ca/whatsnew.lang
@@ -2,62 +2,62 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Hurra! El vostre Firefox està actualitzat.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+El vostre Firefox no està actualitzat.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Per raons de seguretat, recomanem que us actualitzeu a la <a href="{url}">darrera i millor versió</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Esteu utilitzant una versió desconeguda del Firefox.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Per raons de seguretat, recomanem que us baixeu la <a href="{url}">darrera i millor versió</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Comenceu la següent tasca <br/>més ràpid que mai
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Vegeu com les noves funcions del Firefox us ajuden a navegar més ràpid i més eficientment.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Més informació sobre <a href="{url}">la funció de nova pestanya »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Més informació sobre el redisseny de la nostra <a href="{url}">pàgina d'inici »</a>
 
 
 ;Keep in touch
-Keep in touch
+Mantinguem-nos en contacte
 
 
 ;Keep it moving
-Keep it moving
+Que no s'aturi
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Baixeu el Firefox » <b>per a l'Android</b>
 
 
 ;Keep it going
-Keep it going
+Que segueixi endavant
 
 
 ;Join Mozilla
-Join Mozilla
+Col·laboreu amb Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+El Robot d'Android ha estat reproduït a partir del treball creat i <a href="%s">compartit per Google</a> i s'ha utilitzat d'acord amb els termes descrits en la <a href="%s">llicència Creative Commons 3.0 Reconeixement</a>.
 
 
