[es] video_mobbase.lang l10n reviewed
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107216 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-ES/videos/video_mobbase.lang
+++ b/es-ES/videos/video_mobbase.lang
@@ -28,7 +28,7 @@ Así que comenzamos a trabajar en entornos nativos, primero iPhone, después Adr
 
 
 ;and each has its own complexities and subtleties that make it difficult to maintain and iterate on both.
-Cada uno posee sus propias complijidades y particularidades, lo que dificulta el mantenimiento y la iteración en ambos.
+Cada uno posee sus propias complejidades y particularidades, lo que dificulta el mantenimiento y la iteración en ambos.
 
 
 ;We quickly realized that the key to getting a cross-platform solution for most artists was HTML5
