--- a/es-ES/videos/video_teambox.lang
+++ b/es-ES/videos/video_teambox.lang
@@ -1,103 +1,102 @@
 ;Your apps on all your devices
-Your apps on all your devices
+Tus aplicaciones en todos tus dispositivos
 
 
 ;Teambox is an online collaboration software that can be hosted in the cloud or onsite
-Teambox is an online collaboration software that can be hosted in the cloud or onsite
+Teambox es un software de trabajo colaborativo en línea que puede usarse en la nube o en tu servidor,
 
 
 ;that allows teams of any size to collaborate more efficiently,
-that allows teams of any size to collaborate more efficiently,
+lo que permite que grupos de cualquier tamaño colaboren más eficientemente,
 
 
 ;communicate with each other, share files and manage tasks.
-communicate with each other, share files and manage tasks.
+se comuniquen entre ellos, compartan archivos y administren tareas.
 
 
 ;We’re fortunate enough to have customers all over the world
-We’re fortunate enough to have customers all over the world
+Tenemos la gran suerte de tener clientes en todo el mundo
 
 
 ;and using HTML5 we know that we can deliver a consistent user experience
-and using HTML5 we know that we can deliver a consistent user experience
+y al usar HTML5 sabemos que podemos ofrecer una experiencia con una calidad constante
 
 
 ;to those customers anywhere they are, no matter what device they are using.
-to those customers anywhere they are, no matter what device they are using.
+a nuestros clientes dondequiera que estén, sin importar el dispositivo que estén usando.
 
 
 ;There is actually one customer that’s coming to mind called iBolt
-There is actually one customer that’s coming to mind called iBolt
+Hay un cliente que me viene a la mente llamado iBolt
 
 
 ;and they manufacture wireless accessories all over the world.
-and they manufacture wireless accessories all over the world.
+que fabrica accesorios inalámbricos en todo el mundo.
 
 
 ;All of them are on different devices, some of them are using phones
-All of them are on different devices, some of them are using phones
+Todos ellos utilizan dispositivos diferentes, unos usan telefónos móviles
 
 
 ;some are on tablets, some are on the desktop,
-some are on tablets, some are on the desktop,
+otros tabletas, otros equipos de escritorio,
 
 
 ;but we know that all of them have a consistent and great user experience using HTML5
-but we know that all of them have a consistent and great user experience using HTML5
+pero sabemos que todos ellos tienen una experiencia de usuario de gran calidad al usar HTML5
 
 
 ;and that gives us a lot of assurance as a software developer.
-and that gives us a lot of assurance as a software developer.
+y eso nos da mucha seguridad como desarrollador de software.
 
 
 ;Obviously we could build native applications, but doing so,
-Obviously we could build native applications, but doing so,
+Obviamente podemos construir aplicaciones nativas, pero hacer eso,
 
 
 ;for a small fast-growing company like us,
-for a small fast-growing company like us,
+para una compañía pequeña de crecimiento rápido como nosotros,
 
 
 ;takes a lot of time, a lot of extra money and
-takes a lot of time, a lot of extra money and
+toma mucho tiempo, mucho dinero extra
 
 
 ;it impacts our ability to deliver a great app to market sooner.
-it impacts our ability to deliver a great app to market sooner.
+y condiciona nuestra capacidad para ofrecer antes una gran aplicación en el mercado.
 
 
 ;So we made the decision not to build native apps
-So we made the decision not to build native apps
+Así que tomamos la decisión de no crear aplicaciones nativas
 
 
 ;and we’re using technologies like HTML5 to get to market faster
-and we’re using technologies like HTML5 to get to market faster
+y estamos usando tecnologías como HTML5 para llegar más rápido al mercado
 
 
 ;with better products and ultimately to deliver a better user experience for our customers.
-with better products and ultimately to deliver a better user experience for our customers.
+con mejores productos y brindar una mejor experiencia de usuario a nuestros clientes.
 
 
 ;Quite frankly we see it as a terrific onramp for our business
-Quite frankly we see it as a terrific onramp for our business
+Francamanete lo vemos como una plataforma increíble para nuestro negocio.
 
 
 ;Already today we see almost 1,000 signups a day without the Mozilla Marketplace
-Already today we see almost 1,000 signups a day without the Mozilla Marketplace
+Ahora mismo tenemos cerca de 1 000 inscripciones por día sin Mozilla Marketplace
 
 
 ;and we can’t even imagine how many we can possibly get through that Marketplace.
-and we can’t even imagine how many we can possibly get through that Marketplace.
+y no podemos imaginar cuántas podremos conseguir a través del Marketplace.
 
 
 ;So we see it as a tremendous opportunity.
-So we see it as a tremendous opportunity.
+Así que lo vemos como una gran oportunidad.
 
 
 ;Something that gives us more visibility, more cachet in the market
-Something that gives us more visibility, more cachet in the market
+Algo que nos da mayor visibilidad, más espacio en el mercado
 
 
 ;and we’re really excited about it, we’re looking forward to it.
-and we’re really excited about it, we’re looking forward to it.
-
+y estamos muy entusiasmados y deseando ver qué ocurre.
