[es] video_teambox.lang l10n reviewed.
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107239 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-ES/videos/video_teambox.lang
+++ b/es-ES/videos/video_teambox.lang
@@ -83,7 +83,7 @@ Francamanete lo vemos como una plataforma increíble para nuestro negocio.
 
 
 ;Already today we see almost 1,000 signups a day without the Mozilla Marketplace
-Ahora mismo tenemos cerca de 1 000 inscripciones por día sin Mozilla Marketplace
+Ahora mismo tenemos cerca de 1 000 inscripciones por día sin el Marketplace de Mozilla
 
 
 ;and we can’t even imagine how many we can possibly get through that Marketplace.
