[es] video_teambox.lang proofread.
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107240 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-ES/videos/video_teambox.lang
+++ b/es-ES/videos/video_teambox.lang
@@ -35,7 +35,7 @@ que fabrica accesorios inalámbricos en todo el mundo.
 
 
 ;All of them are on different devices, some of them are using phones
-Todos ellos utilizan dispositivos diferentes, unos usan telefónos móviles
+Todos ellos utilizan dispositivos diferentes, unos usan teléfonos móviles
 
 
 ;some are on tablets, some are on the desktop,
@@ -79,7 +79,7 @@ con mejores productos y brindar una mejor experiencia de usuario a nuestros clie
 
 
 ;Quite frankly we see it as a terrific onramp for our business
-Francamanete lo vemos como una plataforma increíble para nuestro negocio.
+Francamente lo vemos como una plataforma increíble para nuestro negocio.
 
 
 ;Already today we see almost 1,000 signups a day without the Mozilla Marketplace
